changes title from shieda to Shef Jamie

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e12ba74f0e.js" crossorigin="anonymous"></script>
-    <title>Shieda</title>
+    <title>Shef Jamie🍕🍔🍰👩‍🍳</title>
 </head>
 
 <body>
